# behave-rv

./: .gitignore  EXPERIMENTS.md  LICENSE  MANIFEST.in  NOTICE  README.md  RELEASING.md  SEMANTICS.md  STABILITY.md  pyproject.toml  run_experiments.sh
.github/workflows/: ci.yml  release.yml
behave_rv/: __init__.py  __main__.py  dashboard.py
behave_rv/catalog/: __init__.py  app_surface.py  condition.py  diff.py  entry.py  registry.py  store.py
behave_rv/compile/: __init__.py  automaton.py  compiler.py  parser_bridge.py
behave_rv/docs/: APP_SURFACE_EVALUATION.md  EXPERIMENTS.md  GUIDE.md  MUTATION.md  OPERATORS.md  SEMANTICS.md  STABILITY.md  __init__.py
behave_rv/engine/: __init__.py  dispatch.py  gc.py  instance.py  loop.py  timers.py
behave_rv/events/: __init__.py  event.py  watermark.py
behave_rv/events/sources/: __init__.py  inprocess.py  logs.py  otel.py  replay.py  subscription.py
behave_rv/expose/: __init__.py  decorators.py
behave_rv/notify/: __init__.py  channel.py
behave_rv/steps/: __init__.py  context.py  decorators.py  vocabulary.py
behave_rv/vendor_behave/: __init__.py
behave_rv/verdict/: __init__.py  explain.py  record.py  sinks.py
demo/: README.md  conftest.py  requirements.txt  slice_explorer.py
demo/order_service/: README.md  app.py  catalog.json  evolution.py  service.py  stability.py  steps.py  test_evolution.py  test_policies.py  test_stability_panel.py
demo/order_service/policies/: 01_paid_after_auth.feature  02_ship_after_pay.feature  03_refund_after_cancel.feature  04_eventually_invoiced.feature  05_eventually_delivered.feature  06_refund_window.feature  07_payment_window.feature  08_never_double_charged.feature  09_never_chargeback.feature  10_cancelled_never_ships.feature  11_flagged_only_reviewed.feature
demo/order_service/templates/: board.html  index.html  stability.html
demo/perf/: README.md  generate_traces.py  run_all.sh  run_experiment.py  run_order.sh  run_session.sh  run_todo.sh
demo/perf/results/: order.jsonl  session.jsonl  todo.jsonl
demo/perf/traces/: CHECKSUMS.sha256  order_10k.jsonl  order_1k.jsonl  session_10k.jsonl  session_1k.jsonl  todo_10k.jsonl  todo_1k.jsonl
demo/session_service/: README.md  app.py  service.py  steps.py  test_policies.py
demo/session_service/policies/: 01_action_after_login.feature  02_logout_after_login.feature  03_lock_after_fail.feature  04_locked_never_acts.feature  05_loggedout_never_acts.feature  06_locked_until_unlocked.feature  07_review_window.feature  08_eventually_logout.feature  09_never_deleted.feature  10_flagged_only_reviewed.feature
demo/session_service/templates/: index.html
demo/todo_app/: README.md  app.py  service.py  steps.py  test_policies.py
demo/todo_app/policies/: 01_complete_after_start.feature  02_edit_after_create.feature  03_reopen_after_complete.feature  04_eventually_completed.feature  05_eventually_archived.feature  06_due_window.feature  07_checkpoint_window.feature  08_archived_never_edited.feature  09_deleted_never_edited.feature  10_blocked_until_unblocked.feature  11_never_corrupted.feature  12_sync_historically_ok.feature
demo/todo_app/templates/: board.html  index.html
docs/: APP_SURFACE_EVALUATION.md  EXPERIMENTS.md  GUIDE.md  MUTATION.md  OPERATORS.md  SEMANTICS.md  STABILITY.md
docs/design/: interprocedural-fingerprint.md
examples/: cross_entity.feature  order_authorized_reworded.feature  order_historically.feature  order_historically_trace.jsonl  order_never_cancelled.feature  order_never_trace.jsonl  order_once.feature  order_once_trace.jsonl  order_previously.feature  order_previously_trace.jsonl  order_since.feature  order_since_trace.jsonl  order_steps.py  order_trace.jsonl  quickstart.py
examples/ticketing/: app_service.py  live_monitor.py  replay_check.py
examples/ticketing/monitoring/: catalog.json  steps.py
examples/ticketing/monitoring/policies/: 01_resolve_after_assign.feature  02_assignment_sla.feature  03_escalation_blocks_closing.feature  04_every_ticket_resolved.feature  05_reply_sla.feature  06_oncall_gets_urgent_only.feature
experiments/: README.md  run_analysis_cost.sh  run_app_curated.sh  run_app_mutation.sh  run_history_replay.sh  run_predicate_stability.sh  run_runtime_performance.sh  run_semantic_conformance.sh
experiments/results/: analysis_cost.txt  app_curated.json  app_curated.txt  app_mutation.json  app_mutation.txt  history_replay.txt  predicate_stability.json  predicate_stability.txt  semantic_conformance.txt
tests/: _a6_order_one.py  _a6_order_two.py  _fingerprint_fixtures.py  _pkg_helper_mod.py  exp_app_coverage.py  exp_app_mutation.py  exp_app_scaling.py  measure_app_history.py  oracle.py  stability_app_surface.py  stability_catalog.py  test_app_surface.py  test_app_surface_cli.py  test_before_operator.py  test_body_signature.py  test_catalog.py  test_catalog_cli.py  test_cli.py  test_compiler.py  test_condition.py  test_dashboard.py  test_docs_shipped.py  test_duplicate_policies.py  test_end_to_end.py  test_engine.py  test_epoch_and_horizon.py  test_event_sources.py  test_examples.py  test_explain.py  test_explanation_fidelity.py  test_gc.py  test_historical_faults.py  test_interprocedural_fingerprint.py  test_late_regime.py  test_lifecycle_regime.py  test_live_delivery.py  test_liveness.py  test_mutation_gaps.py  test_notifications.py  test_parser_bridge.py  (+12 more)
