[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behave-rv"
version = "0.1.1"
description = "Runtime verification over a live event stream, authored in Gherkin. Built on behave's parser; adds a deterministic per-entity engine and a two-sided stability contract that survives code change."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "moraneus" }]
keywords = ["runtime-verification", "gherkin", "behave", "monitoring", "bdd", "temporal-logic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "behave>=1.2.6",
]

[project.optional-dependencies]
otel = ["opentelemetry-sdk"]
dev = ["pytest>=8", "ruff", "mypy", "hypothesis>=6"]

[project.urls]
Homepage = "https://github.com/moraneus/behave-rv"
Repository = "https://github.com/moraneus/behave-rv"
Documentation = "https://github.com/moraneus/behave-rv/blob/main/docs/GUIDE.md"
Issues = "https://github.com/moraneus/behave-rv/issues"

[tool.setuptools]
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.packages.find]
include = ["behave_rv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # Intentional and asserted by tests/test_terminal_warning.py (pytest.warns
    # captures regardless of this filter); silenced suite-wide so the warning
    # summary only ever shows the UNEXPECTED.
    "ignore::behave_rv.engine.loop.NoTerminalConfiguredWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# full pycodestyle (PEP 8) + pyflakes; enforced by CI on every push
select = ["E", "W", "F"]

[tool.mutmut]
# Real mutation-testing campaign (see docs/MUTATION.md). Mutates the core package
# only; tests are the kill signal. vendor_behave/ is a docstring-only
# licensing-boundary marker and carries nothing to mutate.
source_paths = [ "behave_rv/" ]
pytest_add_cli_args_test_selection = [ "tests/" ]
do_not_mutate = [ "behave_rv/vendor_behave/*" ]
also_copy = [ "examples/", "demo/" ]
